// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification renders the UI snapshot correctly 1`] = `
<aside
  className="css-1xdhyk6"
  data-type="standard"
  id="notificationID1"
>
  <div
    className="css-0"
  >
    <header
      className="css-1xdhyk6"
    >
      <svg
        aria-hidden={true}
        className="chakra-icon notification-icon css-q3eg3a"
        focusable={false}
        id="notificationID1-notification-icon"
        role="img"
        title="Notification standard icon"
        viewBox="0 0 24 24"
      >
        <g
          stroke="currentColor"
          strokeWidth="1.5"
        >
          <path
            d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
            fill="none"
            strokeLinecap="round"
          />
          <path
            d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
            fill="currentColor"
            strokeLinecap="round"
          />
          <circle
            cx="12"
            cy="12"
            fill="none"
            r="11.25"
            strokeMiterlimit="10"
          />
        </g>
      </svg>
      <h4
        className="chakra-heading css-1xdhyk6"
        id="notificationID1-heading"
      >
        Notification Heading
      </h4>
    </header>
    <div
      className="css-1xdhyk6"
    >
      <div
        className="css-0"
      >
        Notification content.
      </div>
    </div>
  </div>
</aside>
`;

exports[`Notification renders the UI snapshot correctly 2`] = `
<aside
  className="css-1xdhyk6"
  data-type="announcement"
  id="notificationID2"
>
  <div
    className="css-0"
  >
    <header
      className="css-1xdhyk6"
    >
      <svg
        aria-hidden={true}
        className="chakra-icon notification-icon css-u7u798"
        focusable={false}
        id="notificationID2-notification-icon"
        role="img"
        title="Notification announcement icon"
        viewBox="0 0 24 24"
      >
        <g
          stroke="currentColor"
          strokeWidth="1.5"
        >
          <path
            d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
            fill="none"
            strokeLinecap="round"
          />
          <path
            d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
            fill="currentColor"
            strokeLinecap="round"
          />
          <circle
            cx="12"
            cy="12"
            fill="none"
            r="11.25"
            strokeMiterlimit="10"
          />
        </g>
      </svg>
      <h4
        className="chakra-heading css-1xdhyk6"
        id="notificationID2-heading"
      >
        Notification Heading
      </h4>
    </header>
    <div
      className="css-1xdhyk6"
    >
      <div
        className="css-0"
      >
        Notification content.
      </div>
    </div>
  </div>
</aside>
`;

exports[`Notification renders the UI snapshot correctly 3`] = `
<aside
  className="css-1xdhyk6"
  data-type="warning"
  id="notificationID3"
>
  <div
    className="css-0"
  >
    <header
      className="css-1xdhyk6"
    >
      <svg
        aria-hidden={true}
        className="chakra-icon notification-icon css-zzgjc6"
        focusable={false}
        id="notificationID3-notification-icon"
        role="img"
        title="Notification warning icon"
        viewBox="0 0 24 24"
      >
        <g
          stroke="currentColor"
          strokeWidth="1.5"
        >
          <path
            d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
            fill="none"
            strokeLinecap="round"
          />
          <path
            d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
            fill="currentColor"
            strokeLinecap="round"
          />
          <circle
            cx="12"
            cy="12"
            fill="none"
            r="11.25"
            strokeMiterlimit="10"
          />
        </g>
      </svg>
      <h4
        className="chakra-heading css-1xdhyk6"
        id="notificationID3-heading"
      >
        Notification Heading
      </h4>
    </header>
    <div
      className="css-1xdhyk6"
    >
      <div
        className="css-0"
      >
        Notification content.
      </div>
    </div>
  </div>
</aside>
`;

exports[`Notification renders the UI snapshot correctly 4`] = `
<aside
  className="css-1xdhyk6"
  data-type="standard"
  id="notificationID4"
>
  <div
    className="css-0"
  >
    <header
      className="css-1xdhyk6"
    >
      <svg
        aria-hidden={true}
        className="chakra-icon notification-icon css-q3eg3a"
        focusable={false}
        id="notificationID4-notification-icon"
        role="img"
        title="Notification standard icon"
        viewBox="0 0 24 24"
      >
        <g
          stroke="currentColor"
          strokeWidth="1.5"
        >
          <path
            d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
            fill="none"
            strokeLinecap="round"
          />
          <path
            d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
            fill="currentColor"
            strokeLinecap="round"
          />
          <circle
            cx="12"
            cy="12"
            fill="none"
            r="11.25"
            strokeMiterlimit="10"
          />
        </g>
      </svg>
    </header>
    <div
      className="css-1xdhyk6"
    >
      <div
        className="css-0"
      >
        Notification content.
      </div>
    </div>
  </div>
</aside>
`;

exports[`Notification renders the UI snapshot correctly 5`] = `
<aside
  className="css-1xdhyk6"
  data-type="standard"
  id="notificationID5"
>
  <div
    className="css-0"
  >
    <header
      className="css-1xdhyk6"
    >
      <h4
        className="chakra-heading css-1xdhyk6"
        id="notificationID5-heading"
      >
        Notification Heading
      </h4>
    </header>
    <div
      className="css-1xdhyk6"
    >
      <div
        className="css-0"
      >
        Notification content.
      </div>
    </div>
  </div>
</aside>
`;

exports[`Notification renders the UI snapshot correctly 6`] = `
<aside
  className="css-1xdhyk6"
  data-type="standard"
  id="notificationID6"
>
  <div
    className="css-0"
  >
    <div
      className="css-1xdhyk6"
    >
      <div
        className="css-0"
      >
        Notification content.
      </div>
    </div>
  </div>
</aside>
`;

exports[`Notification renders the UI snapshot correctly 7`] = `
<aside
  className="css-1xdhyk6"
  data-type="standard"
  id="notificationID7"
>
  <div
    className="css-0"
  >
    <header
      className="css-1xdhyk6"
    >
      <svg
        aria-hidden={true}
        className="chakra-icon notification-icon css-q3eg3a"
        focusable={false}
        id="notificationID7-notification-icon"
        role="img"
        title="Notification standard icon"
        viewBox="0 0 24 24"
      >
        <g
          stroke="currentColor"
          strokeWidth="1.5"
        >
          <path
            d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
            fill="none"
            strokeLinecap="round"
          />
          <path
            d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
            fill="currentColor"
            strokeLinecap="round"
          />
          <circle
            cx="12"
            cy="12"
            fill="none"
            r="11.25"
            strokeMiterlimit="10"
          />
        </g>
      </svg>
    </header>
    <div
      className="css-1xdhyk6"
    >
      <div
        className="css-0"
      >
        Notification content.
      </div>
    </div>
  </div>
  <button
    aria-label="Close the notification"
    className="chakra-button css-1xdhyk6"
    id="notificationID7-notification-dismissible-button"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden={true}
      className="chakra-icon css-13thq4x"
      focusable={false}
      id="notificationID7-dismissible-notification-icon"
      role="img"
      title="Notification close icon"
      viewBox="0 0 24 24"
    >
      <g
        stroke="currentColor"
        strokeWidth="1.5"
      >
        <path
          d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
          fill="none"
          strokeLinecap="round"
        />
        <path
          d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
          fill="currentColor"
          strokeLinecap="round"
        />
        <circle
          cx="12"
          cy="12"
          fill="none"
          r="11.25"
          strokeMiterlimit="10"
        />
      </g>
    </svg>
  </button>
</aside>
`;

exports[`Notification renders the UI snapshot correctly 8`] = `
<aside
  className="css-kle7zy"
  data-type="standard"
  id="chakra"
>
  <div
    className="css-0"
  >
    <header
      className="css-1xdhyk6"
    >
      <svg
        aria-hidden={true}
        className="chakra-icon notification-icon css-q3eg3a"
        focusable={false}
        id="chakra-notification-icon"
        role="img"
        title="Notification standard icon"
        viewBox="0 0 24 24"
      >
        <g
          stroke="currentColor"
          strokeWidth="1.5"
        >
          <path
            d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
            fill="none"
            strokeLinecap="round"
          />
          <path
            d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
            fill="currentColor"
            strokeLinecap="round"
          />
          <circle
            cx="12"
            cy="12"
            fill="none"
            r="11.25"
            strokeMiterlimit="10"
          />
        </g>
      </svg>
      <h4
        className="chakra-heading css-1xdhyk6"
        id="chakra-heading"
      >
        Notification Heading
      </h4>
    </header>
    <div
      className="css-1xdhyk6"
    >
      <div
        className="css-0"
      >
        Notification content.
      </div>
    </div>
  </div>
</aside>
`;

exports[`Notification renders the UI snapshot correctly 9`] = `
<aside
  className="css-1xdhyk6"
  data-testid="props"
  data-type="standard"
  id="props"
>
  <div
    className="css-0"
  >
    <header
      className="css-1xdhyk6"
    >
      <svg
        aria-hidden={true}
        className="chakra-icon notification-icon css-q3eg3a"
        focusable={false}
        id="props-notification-icon"
        role="img"
        title="Notification standard icon"
        viewBox="0 0 24 24"
      >
        <g
          stroke="currentColor"
          strokeWidth="1.5"
        >
          <path
            d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
            fill="none"
            strokeLinecap="round"
          />
          <path
            d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
            fill="currentColor"
            strokeLinecap="round"
          />
          <circle
            cx="12"
            cy="12"
            fill="none"
            r="11.25"
            strokeMiterlimit="10"
          />
        </g>
      </svg>
      <h4
        className="chakra-heading css-1xdhyk6"
        id="props-heading"
      >
        Notification Heading
      </h4>
    </header>
    <div
      className="css-1xdhyk6"
    >
      <div
        className="css-0"
      >
        Notification content.
      </div>
    </div>
  </div>
</aside>
`;
